production-ai-stack/inference-service/vllm/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-stage-cpu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-stage-cpu
  template:
    metadata:
      labels:
        app: vllm-stage-cpu
    spec:
      containers:
        - name: vllm
          image: quay.io/jbarea/vllm-openai-cpu:0.9.2
          imagePullPolicy: IfNotPresent
          args:
            - "--model"
            - "$(MODEL_NAME)"
            - "--host"
            - "$(HOST)"
            - "--port"
            - "$(PORT)"
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: model-cache
              mountPath: /models
          resources:
            requests:
              cpu: "2"
              memory: "8Gi"
            limits:
              cpu: "4"
              memory: "32Gi"
      volumes:
        - name: model-cache
          persistentVolumeClaim:
            claimName: vllm-model-cache
