production-ai-stack/inference-service/vllm/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vllm-stage-cpu-ingress
  namespace: llama-stack
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vllm-stage-cpu-svc
                port:
                  number: 80
